objects/BANK_EXP__x.object
<CustomObject>
    <description>BANK_EXP</description>
    <externalDataSource>SAP_HANA</externalDataSource>
    <externalName>BANK_EXP</externalName>
    <fields>
        <fullName>AdjBalance__c</fullName>
        <description>AdjBalance</description>
        <externalDeveloperName>AdjBalance</externalDeveloperName>
        <label>AdjBalance</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvailBalance__c</fullName>
        <description>AvailBalance</description>
        <externalDeveloperName>AvailBalance</externalDeveloperName>
        <label>AvailBalance</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BankID__c</fullName>
        <description>BankID</description>
        <externalDeveloperName>BankID</externalDeveloperName>
        <label>BankID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangedOn__c</fullName>
        <description>ChangedOn</description>
        <externalDeveloperName>ChangedOn</externalDeveloperName>
        <label>ChangedOn</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedOn__c</fullName>
        <description>CreatedOn</description>
        <externalDeveloperName>CreatedOn</externalDeveloperName>
        <label>CreatedOn</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentBal__c</fullName>
        <description>CurrentBal</description>
        <externalDeveloperName>CurrentBal</externalDeveloperName>
        <label>CurrentBal</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>Customer</description>
        <externalDeveloperName>Customer</externalDeveloperName>
        <label>Customer</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXP1__c</fullName>
        <description>EXP1</description>
        <externalDeveloperName>EXP1</externalDeveloperName>
        <label>EXP1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExpiredBal__c</fullName>
        <description>ExpiredBal</description>
        <externalDeveloperName>ExpiredBal</externalDeveloperName>
        <label>ExpiredBal</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <description>ExpiryDate</description>
        <externalDeveloperName>ExpiryDate</externalDeveloperName>
        <label>ExpiryDate</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PendingBal__c</fullName>
        <description>PendingBal</description>
        <externalDeveloperName>PendingBal</externalDeveloperName>
        <label>PendingBal</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RedeemBal__c</fullName>
        <description>RedeemBal</description>
        <externalDeveloperName>RedeemBal</externalDeveloperName>
        <label>RedeemBal</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <description>UserName</description>
        <externalDeveloperName>UserName</externalDeveloperName>
        <label>UserName</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>BANK_EXP</label>
    <pluralLabel>BANK_EXP</pluralLabel>
</CustomObject>